--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Simple interface for Google Cloud Monitoring",
   "main": "index.js",
   "scripts": {
-    "test": "npm test"
+    "pretest": "npm run lint",
+    "test": "echo 'No tests yet :/\n'",
+    "lint": "semistandard"
   },
   "repository": {
     "type": "git",
@@ -26,6 +28,9 @@
   },
   "homepage": "https://github.com/iamat/google-cloudmonitoring",
   "dependencies": {
-    "googleapis": "^2.0.4"
+    "googleapis": "^13.0.0"
+  },
+  "devDependencies": {
+    "semistandard": "^9.0.0"
   }
 }
