add resource autodetection through GCE instance metadata

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/iamat/google-cloudmonitoring",
   "dependencies": {
+    "google-compute-metadata": "^1.2.1",
     "googleapis": "^17.1.0"
   },
   "devDependencies": {
